// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formats YAML 1`] = `
"version: 2

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule: { interval: weekly }

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    ignore:
      - dependency-name: |
          @standard-config/prettier
        update-types: >
          version-update:semver-patch
"
`;

exports[`respects \`tabWidth\` 1`] = `
"version: 2

updates:
    - package-ecosystem: github-actions
      directory: /
      schedule: { interval: weekly }

    - package-ecosystem: npm
      directory: /
      schedule:
          interval: daily
      versioning-strategy: increase
      ignore:
          - dependency-name: |
                @standard-config/prettier
            update-types: >
                version-update:semver-patch
"
`;

exports[`supports \`yamlCollectionStyle\` 1`] = `
"version: 2

updates:
  - package-ecosystem: github-actions
    directory: /
    schedule:
      interval: weekly

  - package-ecosystem: npm
    directory: /
    schedule:
      interval: daily
    versioning-strategy: increase
    ignore:
      - dependency-name: |
          @standard-config/prettier
        update-types: >
          version-update:semver-patch
"
`;

exports[`supports \`yamlCollectionStyle\` 2`] = `
"{
  version: 2,

  updates:
    [
      {
        package-ecosystem: github-actions,
        directory: /,
        schedule: { interval: weekly },
      },

      {
        package-ecosystem: npm,
        directory: /,
        schedule: { interval: daily },
        versioning-strategy: increase,
        ignore:
          [
            {
              dependency-name: "@standard-config/prettier\\n",
              update-types: "version-update:semver-patch\\n",
            },
          ],
      },
    ],
}
"
`;

exports[`supports \`yamlQuoteKeys\` 1`] = `
""version": 2

"updates":
  - "package-ecosystem": github-actions
    "directory": /
    "schedule": { "interval": weekly }

  - "package-ecosystem": npm
    "directory": /
    "schedule":
      "interval": daily
    "versioning-strategy": increase
    "ignore":
      - "dependency-name": |
          @standard-config/prettier
        "update-types": >
          version-update:semver-patch
"
`;

exports[`supports \`yamlQuoteKeys\` 2`] = `
"'version': 2

'updates':
  - 'package-ecosystem': github-actions
    'directory': /
    'schedule': { 'interval': weekly }

  - 'package-ecosystem': npm
    'directory': /
    'schedule':
      'interval': daily
    'versioning-strategy': increase
    'ignore':
      - 'dependency-name': |
          @standard-config/prettier
        'update-types': >
          version-update:semver-patch
"
`;

exports[`supports \`yamlQuoteValues\` 1`] = `
"version: 2

updates:
  - package-ecosystem: "github-actions"
    directory: "/"
    schedule: { interval: "weekly" }

  - package-ecosystem: "npm"
    directory: "/"
    schedule:
      interval: "daily"
    versioning-strategy: "increase"
    ignore:
      - dependency-name: |
          @standard-config/prettier
        update-types: >
          version-update:semver-patch
"
`;

exports[`supports \`yamlQuoteValues\` 2`] = `
"version: 2

updates:
  - package-ecosystem: 'github-actions'
    directory: '/'
    schedule: { interval: 'weekly' }

  - package-ecosystem: 'npm'
    directory: '/'
    schedule:
      interval: 'daily'
    versioning-strategy: 'increase'
    ignore:
      - dependency-name: |
          @standard-config/prettier
        update-types: >
          version-update:semver-patch
"
`;

exports[`supports \`yamlQuoteValues\` 3`] = `
"'version': 2

'updates':
  - 'package-ecosystem': 'github-actions'
    'directory': '/'
    'schedule': { 'interval': 'weekly' }

  - 'package-ecosystem': 'npm'
    'directory': '/'
    'schedule':
      'interval': 'daily'
    'versioning-strategy': 'increase'
    'ignore':
      - 'dependency-name': |
          @standard-config/prettier
        'update-types': >
          version-update:semver-patch
"
`;

exports[`works with other plugins 1`] = `
"foo: [bar, baz]
"
`;
